Fix jump to page action in pager Fix alert

--- a/app/admin/media/css/style.css
+++ b/app/admin/media/css/style.css
@@ -44,6 +44,19 @@ body {
 }
 
 /**
+ * Pagination
+ */
+
+.pagination .jump-to-page {
+    padding: 4px;
+}
+
+	.pagination .jump-to-page input {
+	    border: solid 1px #eee;
+	    text-align: center;
+	}
+
+/**
  * Dropzone
  */
 .dropzone, .dropzone-wrapper {
